# autolug_ws

.devcontainer/: Dockerfile  devcontainer.json
src/conveyor_camera_sim/conveyorbelt_gazebo/: package.xml
src/conveyor_camera_sim/conveyorbelt_gazebo/launch/: conveyorbelt.launch.py
src/conveyor_camera_sim/conveyorbelt_gazebo/models/conveyor_belt/: model.config  model.sdf
src/conveyor_camera_sim/conveyorbelt_gazebo/worlds/: conveyorbelt.world
src/conveyor_camera_sim/conveyorbelt_msgs/: package.xml
src/conveyor_camera_sim/ros2_conveyorbelt/: package.xml
src/conveyor_camera_sim/ros2_conveyorbelt/include/ros2_conveyorbelt/: ros2_conveyorbelt_plugin.hpp
src/conveyor_camera_sim/ros2_conveyorbelt/python/: SpawnObject.py
src/conveyor_camera_sim/ros2_conveyorbelt/src/: ros2_conveyorbelt_plugin.cpp
src/ur_robot_sim/ur_left_arm/: CMakeLists.txt  package.xml
src/ur_robot_sim/ur_left_arm/config/: ur10e_left_controllers.yaml
src/ur_robot_sim/ur_left_arm/launch/: ur10e_left.launch.py  ur10e_left_moveit.launch.py  ur_left_moveit.launch.py
src/ur_robot_sim/ur_left_arm/urdf/: ur_left.urdf.xacro
src/ur_robot_sim/ur_right_arm/: CMakeLists.txt  package.xml
src/ur_robot_sim/ur_right_arm/config/: ur10e_right_controllers.yaml
src/ur_robot_sim/ur_right_arm/launch/: ur10e_right.launch.py
